--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<head> Vi elsker muffins
 		 <link rel = "stylesheet" type = "text/css" href ="format.css"  >
 		 	<script type="text/javascript" src="javascript.js"/></script>
+			<script type="text/javascript" src="cordova.js"></script>
 
 		</head>
 
@@ -33,7 +34,6 @@
 
 		<div id = kage>
 			<a href="https://ordnet.dk/ddo/ordbog?query=muffin">
-				<br>noget text!</a>
 
 
 				<img src="muffin1.jpg" Alt="Nøgen Gnu">
